<resources>
    <string name="app_name">Receipts</string>
    <string name="title_activity_create">Create Account</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_home">Receipts</string>
    <string name="title_activity_add">Add Receipt</string>
    <string name="title_activity_new">New Receipts</string>
    <string name="title_activity_archived">Archived Receipts</string>

    <!-- Main -->
    <string name="main_textview_intro">Receipts</string>
    <string name="main_imageview_logo_description">Logo</string>
    <string name="main_button_create">Create Account</string>
    <string name="main_button_login">Log In</string>
    <string name="main_button_skip">Skip</string>

    <!-- CreateAccount -->
    <string name="create_edittext_username">Username</string>
    <string name="create_edittext_passwordInput">Password</string>
    <string name="create_edittext_passwordConfirm">Confirm password</string>
    <string name="create_button_clear">Clear</string>
    <string name="create_button_submit">Submit</string>

    <!-- LoginAccount -->
    <string name="login_edittext_username">Username</string>
    <string name="login_edittext_password">Password</string>
    <string name="login_button_login">Log In</string>
    <string name="login_button_forgot">Forgot Password</string>

    <!-- Home -->
    <string name="home_button_add">Add new receipt</string>
    <string name="home_button_new">New receipts</string>
    <string name="home_button_old">Archived receipts</string>

    <!-- AddReceipt -->
    <string name="add_edittext_place">Place and/or Item(s)</string>
    <string name="add_edittext_amount">Amount</string>
    <string name="add_radio_cardOne">Card 1</string>
    <string name="add_radio_cardTwo">Card 2</string>
    <string name="add_radio_cardThree">Card 3</string>
    <string name="add_button_submit">Submit</string>
    <string name="add_button_clear">Clear</string>

    <!-- NewReceipts -->
    <string name="new_action_sort">Sort Receipts</string>
    <string name="new_action_archive">Archive Receipts</string>

    <!-- ArchivedReceipts -->
    <string name="archived_action_sort">Sort Receipts</string>
    <string name="archived_action_clear">Clear Receipts</string>

</resources>