<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateAccount">

    <EditText android:id="@+id/create_edittext_username"
        android:hint="@string/create_edittext_username"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText android:id="@+id/create_edittext_passwordInput"
        android:hint="@string/create_edittext_passwordInput"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_edittext_username" />

    <EditText android:id="@+id/create_edittext_passwordConfirm"
        android:hint="@string/create_edittext_passwordConfirm"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_edittext_passwordInput" />

    <Button android:id="@+id/create_button_clear"
        android:text="@string/create_button_clear"
        android:onClick="createButtonClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

    <Button android:id="@+id/create_button_submit"
        android:text="@string/create_button_submit"
        android:onClick="createButtonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/create_button_clear" />

</RelativeLayout>
