<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mattqunell.receipts.Add">

    <DatePicker android:id="@+id/add_datepicker_date"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText android:id="@+id/add_edittext_place"
        android:hint="@string/add_edittext_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_datepicker_date" />

    <EditText android:id="@+id/add_edittext_amount"
        android:hint="@string/add_edittext_amount"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_edittext_place"/>

    <RadioGroup android:id="@+id/add_layout_radio"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add_layout_button" >

        <RadioButton android:id="@+id/add_radio_cardOne"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/add_radio_cardOne" />

        <RadioButton android:id="@+id/add_radio_cardTwo"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/add_radio_cardTwo" />

        <RadioButton android:id="@+id/add_radio_cardThree"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/add_radio_cardThree" />
    </RadioGroup>

    <LinearLayout android:id="@+id/add_layout_button"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        style="?android:attr/buttonBarStyle" >

        <Button android:id="@+id/add_button_submit"
            android:text="@string/add_button_submit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button android:id="@+id/add_button_clear"
            android:text="@string/add_button_clear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>