<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mattqunell.receipts.Main">

    <TextView android:id="@+id/main_textview_intro"
        android:text="@string/main_textview_intro"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <ImageView android:id="@+id/main_imageview_logo"
        android:src="@drawable/logo"
        android:contentDescription="@string/main_imageview_logo_description"
        android:adjustViewBounds="true"
        android:maxWidth="@dimen/main_imageview_logo_size"
        android:maxHeight="@dimen/main_imageview_logo_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp" />

    <Button android:id="@+id/main_button_create"
        android:text="@string/main_button_create"
        android:onClick="mainButtonCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_button_login" />

    <Button android:id="@+id/main_button_login"
        android:text="@string/main_button_login"
        android:onClick="mainButtonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_button_skip" />

    <Button android:id="@+id/main_button_skip"
        android:text="@string/main_button_skip"
        android:onClick="mainButtonSkip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
