<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mattqunell.receipts.Login">

    <EditText android:id="@+id/login_edittext_username"
        android:hint="@string/login_edittext_username"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText android:id="@+id/login_edittext_password"
        android:hint="@string/login_edittext_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_edittext_username" />

    <Button android:id="@+id/login_button_login"
        android:text="@string/login_button_login"
        android:onClick="loginButtonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_edittext_password" />

    <Button android:id="@+id/login_button_forgot"
        android:text="@string/login_button_forgot"
        android:onClick="loginButtonForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button_login" />

</RelativeLayout>
