<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mattqunell.receipts.Home">

    <Button android:id="@+id/home_button_add"
        android:text="@string/home_button_add"
        android:onClick="addReceipt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button android:id="@+id/home_button_new"
        android:text="@string/home_button_new"
        android:onClick="newReceipts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_button_add" />

    <Button android:id="@+id/home_button_old"
        android:text="@string/home_button_old"
        android:onClick="oldReceipts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_button_new" />

</RelativeLayout>
